--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
   },
   "dependencies": {
     "@actions/core": "^1.10.0",
-    "@azure/openai": "2.0.0-beta.1",
     "@octokit/rest": "^19.0.7",
     "minimatch": "^7.4.2",
+    "nock": "^13.5.5",
     "openai": "^4.20.1",
     "parse-diff": "^0.11.1",
     "ts-node": "^10.9.1"
