Moving actions and workflows to their own folders

--- a/act/fixtures/workflows/code_review.yml
+++ b/act/fixtures/workflows/code_review.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           path: ./
       - name: Code Review
-        uses: ./act/fixtures/
+        uses: ./act/fixtures/actions
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
