--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,5 +9,10 @@
     // "ghcr.io/guiyomh/features/just:0": {},
     // "ghcr.io/jungaretti/features/ripgrep:1": {},
     // "ghcr.io/lukewiwa/features/shellcheck:0": {},
+  },
+  "customizations": {
+    "vscode": {
+      "extensions": ["yzhang.markdown-all-in-one"]
+    }
   }
 }
