--- a/.github/workflows/code_review.yml
+++ b/.github/workflows/code_review.yml
@@ -12,11 +12,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
       - name: Code Review
-        uses: cds-snc/cds-ai-codereviewer@main
+        uses: cds-snc/cds-ai-codereviewer@feature/include-pattern
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           OPENAI_API_MODEL: ${{ vars.OPENAI_API_MODEL }}
           OPENAI_API_VERSION: ${{ vars.OPENAI_API_VERSION }}
           OPENAI_BASE_URL: ${{ vars.OPENAI_BASE_URL }}
-          exclude: "yarn.lock,dist/**"
+          exclude: "*lock*,dist/**,**/*.js,**/*.js.map"
+          include: "**/*.ts,**/*.yml"
