--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,15 @@
   "compilerOptions": {
     "target": "es6",
     "module": "commonjs",
+    "moduleResolution": "node",
     "outDir": "./lib",
     "rootDir": "./src",
     "strict": true,
     "noImplicitAny": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
+    "skipLibCheck": true,
+    "types": ["node", "axios"]
   },
   "exclude": ["node_modules", "**/*.test.ts"]
 }
