--- a/.github/workflows/code_review.yml
+++ b/.github/workflows/code_review.yml
@@ -1,9 +1,9 @@
 name: CDS Code Review with OpenAI
-on:
-  pull_request:
-    types:
-      - opened
-      - synchronize
+# on:
+#   pull_request:
+#     types:
+#       - opened
+#       - synchronize
 permissions: write-all
 jobs:
   code_review:
