--- a/.github/workflows/code_review.yml
+++ b/.github/workflows/code_review.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
       - name: Code Review
-        uses: cds-snc/cds-ai-codereviewer@main
+        uses: cds-snc/cds-ai-codereviewer@feature/enable-action-on-commit-msg
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
