--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,18 +1,31 @@
 {
   "name": "Node.js & TypeScript",
   // Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
-  "image": "mcr.microsoft.com/devcontainers/typescript-node:1-22-bookworm",
+  "dockerComposeFile": "docker-compose.yml",
+  "service": "ai-code-reviewer",
+  "workspaceFolder": "/workspace",
   "features": {
-    "ghcr.io/devcontainers/features/aws-cli:1": {},
-    "ghcr.io/eitsupi/devcontainer-features/jq-likes:2": {},
-    "ghcr.io/dhoeric/features/act:1": {}
     // "ghcr.io/guiyomh/features/just:0": {},
     // "ghcr.io/jungaretti/features/ripgrep:1": {},
     // "ghcr.io/lukewiwa/features/shellcheck:0": {},
   },
   "customizations": {
     "vscode": {
-      "extensions": ["yzhang.markdown-all-in-one"]
+      "extensions": [
+        "eamodio.gitlens",
+        "fill-labs.dependi",
+        "GitHub.copilot",
+        "github.copilot-chat",
+        "github.vscode-pull-request-github",
+        "kaiwood.center-editor-window",
+        "ms-azuretools.vscode-docker",
+        "ms-vsliveshare.vsliveshare",
+        "timonwong.shellcheck",
+        "usernamehw.errorlens",
+        "visualstudioexptteam.vscodeintellicode",
+        "wenfangdu.jump",
+        "yzhang.markdown-all-in-one"
+      ]
     }
   }
 }
