--- a/package.json
+++ b/package.json
@@ -12,16 +12,17 @@
     "lint": "prettier --check ."
   },
   "dependencies": {
-    "@actions/core": "^1.10.0",
+    "@actions/core": "^1.11.1",
     "@octokit/rest": "^19.0.7",
-    "axios": "1.7.7",
+    "axios": "^1.7.9",
     "csv-writer": "^1.6.0",
+    "dotenv": "^16.4.7",
     "minimatch": "^7.4.2",
-    "nock": "^13.5.5",
-    "openai": "^4.20.1",
+    "nock": "^13.5.6",
+    "openai": "^4.77.0",
     "parse-diff": "^0.11.1",
-    "ts-node": "^10.9.1",
-    "yargs": "17.7.2"
+    "ts-node": "^10.9.2",
+    "yargs": "^17.7.2"
   },
   "devDependencies": {
     "@types/axios": "0.14.0",
