Support multiple repositories parameters via the CLI

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,8 +12,9 @@
                 "src/exportComments.ts",
                 "--owner",
                 "cds-snc",
-                "--repo",
+                "--repos",
                 "notification-terraform",
+                "notification-manifests",
                 "--author",
                 "github-actions[bot]",
                 "--since",
